--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
   <head>
     <title>Loading</title>
-    <meta http-equiv="refresh" content="0; url=https://mr-yak.github.io/vrassesment/index.html" />
+    <meta http-equiv="refresh" content="0; url=https://MasonTheDoge.github.io/360/index.html" />
   </head>
   <body>
   </body>
