--- a/360/assessment.html
+++ b/360/assessment.html
@@ -43,7 +43,7 @@ body {
 <center style="font-size:3.76vw;"><span><b>
 Kristn 360 viewer
 </b></span></center>
-     <a href="http://127.0.0.1:62455/image/360%20ass/New%20Text%20Document.html">  
+     <a href="https://masonthedoge.github.io/360/lucascreek.html">  
      <img src="https://lh3.googleusercontent.com/pw/AL9nZEWNYdzRCcmu4m_aG-_KQJrVyBvGix3dgfeknB2F_UxoD6z_f_rZm1es45BrwXeK5Kudu6ZR0qZLzYCyvfy2nvY3uSlwxK3LAFw4muKnSc79E865bKxF6xN_XeRHP7meJ4nKm3Yed_f0h11DRUuJkwjN=w958-h876-no?authuser=0" style="width:49vw";>
      </a>
           <a href="http://127.0.0.1:60308/image/360%20ass/New%20Text%20Document%20-%20Copy.html">
